<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/function1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function1" />

    <Button
        android:id="@+id/function2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function2" />

    <Button
        android:id="@+id/function3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function3" />

    <Button
        android:id="@+id/function4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function4" />

    <Button
        android:id="@+id/function5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/function5" />

</androidx.appcompat.widget.LinearLayoutCompat>